added general style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="" href="" />
+  <link rel="icon" type="image.png"
+    href="https://upload.wikimedia.org/wikipedia/commons/0/0c/Netflix_2015_N_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Boolfix</title>
+  <title>Netflix</title>
 
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css"
